Show feedback button on sad tab if sad tab has shown recently.

BUG=713828
TEST=manual, see bug.

Review-Url: https://codereview.chromium.org/2885143009
Cr-Commit-Position: refs/heads/master@{#473204}

Former-commit-id: c9a40db46670d1c37111c0010d36fc290566eaf0